# cp219_project-2

./: .gitignore  README.md  main.py  pyproject.toml
config/: config.yaml
data/project_raw/: poisoning_labelled_test.csv  poisoning_labelled_train.csv
experiments/: all.sh  all_vs_0.15.sh  run_all.py  run_task1.py  run_task2.py  run_task3.py  run_task4.py  run_task5.py  run_task5_ucad.py
outputs/models/task3/: gmm.pkl  isolation_forest.pkl  k-means.pkl  one-class_svm.pkl
outputs/models/task3_core/: dbscan.pkl  gmm.pkl  isolation_forest.pkl  k-means.pkl  one-class_svm.pkl
outputs/models/task3_full/: gmm.pkl  isolation_forest.pkl  k-means.pkl  one-class_svm.pkl
outputs/tables/: task1_basic_statistics.csv  task1_goose_rule_analysis.csv
outputs/tables/task2/: attack_difficulty.csv  attack_signatures.csv  feature_importance_rf.csv  feature_importance_scores.csv  feature_statistics.csv
outputs/tables/task2_core/: attack_difficulty.csv  attack_signatures.csv  clean_numeric_features.csv  feature_importance_rf.csv  used_fields.csv  (+2 more)
results/: global_ranking.csv  metadata.json
src/: preprocessing.py
src/SV_try/: binary_unsupervised.py  dt.py  dt_try.ipynb  preprocessed.py
src/collaboration/: check_attack_values.py  check_features.py  combined_kde_plots.py  distribution_plots.py  feature_importance.py  multiclass_unsupervised.py  nan_find.py
src/models/: ucad.py
src/tasks/: task1_eda.py  task2_characterization.py  task2_core_vs_engg.py  task3_binary.py  task4_multiclass_detection.py  task5_advanced_analyses.py  task5_ucad.py
src/utils/: wandb_utils.py
(+144 files in other folders)
